--- a/hr-eurekaserver/src/main/resources/application.properties
+++ b/hr-eurekaserver/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.application.name=hr-eureka-server
+server.port=${SERVER.PORT:8761}
 
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
